<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Shreyas Patil
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    tools:context=".view.about.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/text_noty_icon"
            android:src="@drawable/noty_app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo" />

        <TextView
            android:id="@+id/text_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:fontFamily="@font/universal_std"
            tools:text="v1.0.0 (10)"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_app_name" />


        <androidx.cardview.widget.CardView
            android:id="@+id/license_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_48"
            android:layout_marginEnd="@dimen/dimen_8"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="@dimen/dimen_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_app_version">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_12">

                <TextView
                    android:id="@+id/text_license_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_license_title"
                    style="@style/AboutContentTitleStyle" />

                <TextView
                    android:id="@+id/text_license"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_license"
                    style="@style/AboutContentBodyStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/repo_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_8"
            app:cardBackgroundColor="@color/background"
            app:cardElevation="@dimen/dimen_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/license_card_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_12">

                <TextView
                    android:id="@+id/text_repo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_visit"
                    style="@style/AboutContentTitleStyle" />

                <TextView
                    android:id="@+id/text_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_repo_url"
                    android:textColor="@color/primaryColor"
                    style="@style/AboutContentBodyStyle" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
